--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Story/ViewStory.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Story/ViewStory.cshtml
@@ -5,7 +5,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <br />
-<div class="btnDiv">@Html.ActionLink("Back to Stories", "Stories", null, new { @class = "btn btn-outline-primary" })</div>
+
+<div class="btnDiv"><a class="btn btn-outline-primary" href='javascript:history.go(-1)'>Back</a></div>
 
 
 <br />
