--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Content/a-style.css
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Content/a-style.css
@@ -27,3 +27,9 @@
     border-radius:0px;
     width: 100% !important;
 }
+.btnDiv .btn {
+    padding: 3px 30px;
+    font-size: 12px;
+    border-radius: 4px;
+    margin: 2px;
+}
