--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Admin/ArticleManage.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Admin/ArticleManage.cshtml
@@ -12,7 +12,7 @@
     }
 </style>
 
-<div class="card" style="width: 70rem;">
+<div class="card">
 
     <div class="card-header">
         <img src="@Url.Action("retrieveUserPic", "Admin", new { username = Model.model.userName })" style="width:5rem; height:5rem; float:left;" alt="Image" />
