--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Doctor/DrProfile.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Doctor/DrProfile.cshtml
@@ -18,14 +18,19 @@
     function showApprovedArticles() {
         var approved = document.getElementById("ApprovedArticles");
         var pending = document.getElementById("PendingArticles");
+        var rejected = document.getElementById("RejectedArticles");
         var approvedTab = document.getElementById("approvedTab");
         var pendingTab = document.getElementById("pendingTab");
+        var rejectedTab = document.getElementById("rejectedTab");
 
         if (approved.style.display === "none") {
             approved.style.display = "block";
             pending.style.display = "none";
+            rejected.style.display = "none";
             approvedTab.style.backgroundColor = "#ffffff";
             pendingTab.style.backgroundColor = "#d9d9d9"; 
+            rejectedTab.style.backgroundColor = "#d9d9d9"; 
+
 
         }
     }
@@ -33,14 +38,35 @@
     function showPendingArticles() {
         var approved = document.getElementById("ApprovedArticles");
         var pending = document.getElementById("PendingArticles");
+        var rejected = document.getElementById("RejectedArticles");
         var approvedTab = document.getElementById("approvedTab");
         var pendingTab = document.getElementById("pendingTab");
+        var rejectedTab = document.getElementById("rejectedTab");
 
         if (pending.style.display === "none") {
             pending.style.display = "block";
             approved.style.display = "none";
+            rejected.style.display = "none";
             approvedTab.style.backgroundColor = "#d9d9d9";
             pendingTab.style.backgroundColor = "#ffffff";
+            rejectedTab.style.backgroundColor = "#d9d9d9"; 
+        }
+    }
+    function showRejectedArticles() {
+        var approved = document.getElementById("ApprovedArticles");
+        var pending = document.getElementById("PendingArticles");
+        var rejected = document.getElementById("RejectedArticles");
+        var approvedTab = document.getElementById("approvedTab");
+        var pendingTab = document.getElementById("pendingTab");
+        var rejectedTab = document.getElementById("rejectedTab");
+
+        if (rejected.style.display === "none") {
+            pending.style.display = "none";
+            approved.style.display = "none";
+            rejected.style.display = "block";
+            approvedTab.style.backgroundColor = "#d9d9d9";
+            pendingTab.style.backgroundColor = "#d9d9d9";
+            rejectedTab.style.backgroundColor = "#ffffff"; 
         }
     }
 </script>
@@ -84,15 +110,19 @@
 
 @if (ViewBag.ownAccount == true)
 {
-    <ul class="nav nav-tabs ">
-        <li class="nav-item">
-            <button class="nav-link active" id ="approvedTab"  onload="setApprovedTab()" onclick="showApprovedArticles()">Approved Articles</button>
-        </li>
-        <li class="nav-item">
-            <button class="nav-link active" id="pendingTab" style="background-color: #d9d9d9;" onclick="showPendingArticles()">Pending Articles</button>
+<ul class="nav nav-tabs ">
+    <li class="nav-item">
+        <button class="nav-link active" id="approvedTab" onload="setApprovedTab()" onclick="showApprovedArticles()">Approved Articles</button>
+    </li>
+    <li class="nav-item">
+        <button class="nav-link active" id="pendingTab" style="background-color: #d9d9d9;" onclick="showPendingArticles()">Pending Articles</button>
 
-        </li>
-    </ul>
+    </li>
+    <li class="nav-item">
+        <button class="nav-link active" id="rejectedTab" style="background-color: #d9d9d9;" onclick="showRejectedArticles()">Rejected Articles</button>
+
+    </li>
+</ul>
 
 }
 else
@@ -116,17 +146,13 @@ else
                     <div class="card" style="width: 70rem;">
                         <a href="@Url.Action("ViewArticle", "Article", new { id = item.articleID })" style="text-decoration: none;">
                             <div class="card-header">
-                                <div style="height:2rem;">
+                                <div>
                                     <h6 class="card-subtitle mb-2 text-muted">Posted on : @Html.DisplayFor(modelItem => item.postDate)</h6>
-                                    <h6 class="card-subtitle mb-2 text-muted">By : @Html.DisplayFor(modelItem => item.userName)</h6>
                                 </div>
                             </div>
                             <div class="card-body">
                                 <h3 class="card-title">@Html.DisplayFor(modelItem => item.title)</h3>
                                 <p class="card-text">@Html.Raw(item.body)</p>
-                            </div>
-                            <div class="card-footer">
-                                <p>@Html.DisplayFor(modelItem => item.articleStatus)</p>
                             </div>
                         </a>
                     </div>
@@ -149,16 +175,50 @@ else
                             <div class="card-header">
                                 <div style="height:2rem;">
                                     <h6 class="card-subtitle mb-2 text-muted">Posted on : @Html.DisplayFor(modelItem => item.postDate)</h6>
-                                    <h6 class="card-subtitle mb-2 text-muted">By : @Html.DisplayFor(modelItem => item.userName)</h6>
                                 </div>
                             </div>
                             <div class="card-body">
                                 <h3 class="card-title">@Html.DisplayFor(modelItem => item.title)</h3>
                                 <p class="card-text">@Html.Raw(item.body)</p>
                             </div>
-                            <div class="card-footer">
-                                <p>@Html.DisplayFor(modelItem => item.articleStatus)</p>
+                        </a>
+                    </div>
+
+
+                    <br />
+                }
+
+            }
+        </div>
+    </div>
+    <div class="tab-pane fade active show">
+        <div id="RejectedArticles" style="display:none;">
+            @foreach (var item in Model)
+            {
+                if (item.articleStatus == "rejected")
+                {
+                    <div class="card" style="width: 70rem;">
+                        <a href="@Url.Action("ViewArticle", "Article", new { id = item.articleID })" style="text-decoration: none;">
+                            <div class="card-header">
+                                <div style="height:2rem;">
+                                    <h6 class="card-subtitle mb-2 text-muted">Posted on : @Html.DisplayFor(modelItem => item.postDate)</h6>
+                                </div>
                             </div>
+                            <div class="card-body">
+                                <h3 class="card-title">@Html.DisplayFor(modelItem => item.title)</h3>
+                                <p class="card-text">@Html.Raw(item.body)</p>
+                            </div>
+                            <footer>
+                                <a href="@Url.Action("EditArticle", "Article", new { id = item.articleID })" style="text-decoration: none;">
+                                    Edit
+                                </a>
+                                <a href="@Url.Action("EditArticle", "Article", new { id = item.articleID })" style="text-decoration: none;">
+                                    Delete
+                                </a>
+
+
+
+                            </footer>
                         </a>
                     </div>
 
