--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Content/a-style.css
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Content/a-style.css
@@ -7,7 +7,7 @@
 
 .maincard {
     width: 18rem;
-    height: 520px !important;
+    height: 550px !important;
     border-radius: 15px;
 }
 
@@ -32,4 +32,14 @@
     font-size: 12px;
     border-radius: 4px;
     margin: 2px;
+}
+.articleCard {
+    height: 250px !important;
+    border-radius: 5px;
+    margin-top: 4px;
+}
+.articleTextBody {
+    width: 100%;
+    height: 100px !important;
+    overflow: hidden;
 }
