--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Doctor/DrProfile.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Doctor/DrProfile.cshtml
@@ -28,8 +28,8 @@
             pending.style.display = "none";
             rejected.style.display = "none";
             approvedTab.style.backgroundColor = "#ffffff";
-            pendingTab.style.backgroundColor = "#d9d9d9"; 
-            rejectedTab.style.backgroundColor = "#d9d9d9"; 
+            pendingTab.style.backgroundColor = "#d9d9d9";
+            rejectedTab.style.backgroundColor = "#d9d9d9";
 
 
         }
@@ -49,7 +49,7 @@
             rejected.style.display = "none";
             approvedTab.style.backgroundColor = "#d9d9d9";
             pendingTab.style.backgroundColor = "#ffffff";
-            rejectedTab.style.backgroundColor = "#d9d9d9"; 
+            rejectedTab.style.backgroundColor = "#d9d9d9";
         }
     }
     function showRejectedArticles() {
@@ -66,38 +66,46 @@
             rejected.style.display = "block";
             approvedTab.style.backgroundColor = "#d9d9d9";
             pendingTab.style.backgroundColor = "#d9d9d9";
-            rejectedTab.style.backgroundColor = "#ffffff"; 
+            rejectedTab.style.backgroundColor = "#ffffff";
         }
     }
 </script>
 
 
 <div style="margin-left: 5px; margin-top: 10px;">
+    <br/>
     <table>
         <tr>
             <td>
-                <img src="@Url.Action("retrieveUserPic", "Doctor", new { username = ViewBag.username})" style="width:150px; height:150px; float:left; margin-right:10px;" alt="Image" />
+                <img src="@Url.Action("retrieveUserPic", "Doctor", new { username = ViewBag.username})" style="width:210px; height:210px; float:left; margin-right:10px;" alt="Image" />
             </td>
-            <td>
-                <h3>@ViewBag.docName</h3>
-                <p>Bio</p>
-                <p class="title">Doctor at @ViewBag.workLocation</p>
-                <p>@ViewBag.description</p>
-                <p>Contact</p>
-                <p class="title">Email: @ViewBag.contactEmail</p>
-                <p class="title">Office No: @ViewBag.contactPhone</p>
+            <td style="padding-left:50px;">
+                <br/>
+                <h3 class=" font-weight-bold">@ViewBag.docName</h3>
+                <div class="bio">
+                    <p>Doctor at @ViewBag.workLocation</p>
+                    <span class="text-muted">Bio:</span>
+                    <p>@ViewBag.description</p>
+                </div>
+                <div class="contact">
+                    <span class="text-muted">Contact:</span>
+                    <p style="margin:0;">   Email: @ViewBag.contactEmail</p>
+                    <span class="">  Office No: @ViewBag.contactPhone</span>
+                </div>
             </td>
         </tr>
         <tr>
             <td>
                 @if (ViewBag.ownAccount == true)
                 {
+                    <br />
                     <button class="btn btn-secondary">@Html.ActionLink("Create Article", "createArticle", "Article")</button>
                 }
             </td>
             <td>
                 @if (ViewBag.ownAccount == true)
                 {
+                    <br />
                     <button class="btn btn-secondary">@Html.ActionLink("Edit Profile", "EditDrProfile", "Doctor")</button>
                 }
             </td>
@@ -105,24 +113,24 @@
     </table>
 </div>
 
-
+<br/>
 <h2>Articles</h2>
 
 @if (ViewBag.ownAccount == true)
 {
-<ul class="nav nav-tabs ">
-    <li class="nav-item">
-        <button class="nav-link active" id="approvedTab" onload="setApprovedTab()" onclick="showApprovedArticles()">Approved Articles</button>
-    </li>
-    <li class="nav-item">
-        <button class="nav-link active" id="pendingTab" style="background-color: #d9d9d9;" onclick="showPendingArticles()">Pending Articles</button>
+    <ul class="nav nav-tabs ">
+        <li class="nav-item">
+            <button class="nav-link active" id="approvedTab" onload="setApprovedTab()" onclick="showApprovedArticles()">Approved Articles</button>
+        </li>
+        <li class="nav-item">
+            <button class="nav-link active" id="pendingTab" style="background-color: #d9d9d9;" onclick="showPendingArticles()">Pending Articles</button>
 
-    </li>
-    <li class="nav-item">
-        <button class="nav-link active" id="rejectedTab" style="background-color: #d9d9d9;" onclick="showRejectedArticles()">Rejected Articles</button>
+        </li>
+        <li class="nav-item">
+            <button class="nav-link active" id="rejectedTab" style="background-color: #d9d9d9;" onclick="showRejectedArticles()">Rejected Articles</button>
 
-    </li>
-</ul>
+        </li>
+    </ul>
 
 }
 else
@@ -143,7 +151,7 @@ else
             {
                 if (item.articleStatus == "approved")
                 {
-                    <div class="card" style="width: 70rem;">
+                    <div class="card articleCard" style="width: 70rem;">
                         <a href="@Url.Action("ViewArticle", "Article", new { id = item.articleID })" style="text-decoration: none;">
                             <div class="card-header">
                                 <div>
@@ -152,7 +160,10 @@ else
                             </div>
                             <div class="card-body">
                                 <h3 class="card-title">@Html.DisplayFor(modelItem => item.title)</h3>
-                                <p class="card-text">@Html.Raw(item.body)</p>
+                                <span class="card-text">
+                                    <div class="articleTextBody">@Html.Raw(item.body)</div>
+                                </span>
+                                <a href="@Url.Action("ViewArticle", "Article", new { id = item.articleID })" class="card-link" style="font-weight:bold;">Read More</a>
                             </div>
                         </a>
                     </div>
@@ -170,16 +181,19 @@ else
             {
                 if (item.articleStatus == "pending")
                 {
-                    <div class="card" style="width: 70rem;">
+                    <div class="card articleCard" style="width: 70rem;">
                         <a href="@Url.Action("ViewArticle", "Article", new { id = item.articleID })" style="text-decoration: none;">
                             <div class="card-header">
-                                <div style="height:2rem;">
+                                <div style="height:1rem;">
                                     <h6 class="card-subtitle mb-2 text-muted">Posted on : @Html.DisplayFor(modelItem => item.postDate)</h6>
                                 </div>
                             </div>
                             <div class="card-body">
                                 <h3 class="card-title">@Html.DisplayFor(modelItem => item.title)</h3>
-                                <p class="card-text">@Html.Raw(item.body)</p>
+                                <span class="card-text">
+                                    <div class="articleTextBody">@Html.Raw(item.body)</div>
+                                </span>
+                                <a href="@Url.Action("ViewArticle", "Article", new { id = item.articleID })" class="card-link" style="font-weight:bold;">Read More</a>
                             </div>
                         </a>
                     </div>
@@ -197,26 +211,24 @@ else
             {
                 if (item.articleStatus == "rejected")
                 {
-                    <div class="card" style="width: 70rem;">
+                    <div class="card articleCard" style="width: 70rem;">
                         <a href="@Url.Action("ViewArticle", "Article", new { id = item.articleID })" style="text-decoration: none;">
                             <div class="card-header">
-                                <div style="height:2rem;">
+                                <div style="height:1rem;">
                                     <h6 class="card-subtitle mb-2 text-muted">Posted on : @Html.DisplayFor(modelItem => item.postDate)</h6>
                                 </div>
                             </div>
                             <div class="card-body">
                                 <h3 class="card-title">@Html.DisplayFor(modelItem => item.title)</h3>
-                                <p class="card-text">@Html.Raw(item.body)</p>
+                                <span class="card-text">
+                                    <div class="articleTextBody">@Html.Raw(item.body)</div>
+                                </span>
+                                <a href="@Url.Action("ViewArticle", "Article", new { id = item.articleID })" class="card-link" style="font-weight:bold;">Read More</a>
                             </div>
                             <footer>
-                                <a href="@Url.Action("EditArticle", "Article", new { id = item.articleID })" style="text-decoration: none;">
-                                    Edit
-                                </a>
-                                <a href="@Url.Action("EditArticle", "Article", new { id = item.articleID })" style="text-decoration: none;">
+                                 <a  class="btn btn-outline-secondary"href="@Url.Action("DeleteArticle", "Article", new { id = item.articleID })" style="text-decoration: none; float:right;">
                                     Delete
                                 </a>
-
-
 
                             </footer>
                         </a>
@@ -235,10 +247,10 @@ else
 
 
     Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
-    @Html.PagedListPager(Model, page => Url.Action("DrProfile", new { page, viewUsername = ViewBag.username}))
+    @Html.PagedListPager(Model, page => Url.Action("DrProfile", new { page, viewUsername = ViewBag.username }))
 
     <!--Search script-->
-    @section Scripts
-{
+    @section Scripts{
+        <link href="~/Content/a-style.css" rel="stylesheet">
         <script type="text/javascript" src="~/Scripts/search.js"></script>
     }
