--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Story/Stories.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Story/Stories.cshtml
@@ -47,7 +47,7 @@ else
                     <div class="card-text">@Html.Raw(item.body)</div>
                 </div>
                 <div class="card-footer">
-                    <a href="@Url.Action("ViewStory", "Story", new { id = item.storyID })" style="text-decoration: none;">Read More</a>
+                    <a href="@Url.Action("ViewStory", "Story", new { id = item.storyID })" style="text-decoration: none;">Comments</a>
                 </div>
             </a>
         </div>
