--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Home/QuitCentres.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Home/QuitCentres.cshtml
@@ -62,6 +62,7 @@
                 // move the map to have the location in its center
                 abc.bindPopup("Your location.").openPopup();
                 map.panTo(new L.LatLng(latit, longit));
+                map.setView([position.coords.latitude, position.coords.longitude], 15);
             }); 
         }
     }
