--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Comments/CreateComment.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Comments/CreateComment.cshtml
@@ -3,6 +3,11 @@
 @{
     Layout = "";
 }
+<style>
+    .commentSize{
+        max-width:100%;
+    }
+</style>
 
 @using (Html.BeginForm("CreateComment", "Comments", new SmokeFreeApplication.Controllers.CommentQuery(Model.parentID, Model.parentType), FormMethod.Post, null))
 {
@@ -13,7 +18,7 @@
 
         <div class="d-flex collapse">
             <div class="p-1" style="width:90%;">
-                @Html.EditorFor(model => model.body, new { htmlAttributes = new { @class = "form-control comment-field", @placeholder = "What's on your mind?" } })
+                @Html.EditorFor(model => model.body, new { htmlAttributes = new { @class = "form-control comment-field commentSize", @placeholder = "What's on your mind?" } })
                 @Html.ValidationMessageFor(model => model.body, "", new { @class = "text-danger" })
             </div>
             <div class="p-1" style="width:10%;">
