--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Admin/ArticleManage.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Admin/ArticleManage.cshtml
@@ -68,7 +68,7 @@
                                         <div class="form-group row">
                                             <label class="col-sm-2 col-form-label">Body: </label>
                                             <div class="col-sm-10">
-                                                @Html.TextAreaFor(m => Model.emailModel.Body, new { @placeholder = "Hi Sir/Mdm,\nSorry, we have deem it unfit to be posted. Please submit another one\nThank you", @class = "form-control", @rows = 5 })
+                                                @Html.TextAreaFor(m => Model.emailModel.Body, new { @placeholder = "Hi Sir/Mdm,\nSorry, we have deemed it unfit to be posted. Please submit another request\nThank you", @class = "form-control", @rows = 5 })
                                             </div>
                                         </div>
                                         <div class="form-group-lg">
