--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Admin/DoctorManage.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Admin/DoctorManage.cshtml
@@ -69,7 +69,7 @@
                                         <div class="form-group row">
                                             <label class="col-sm-2 col-form-label">Body: </label>
                                             <div class="col-sm-10">
-                                                @Html.TextAreaFor(m => Model.emailModel.Body, new { @placeholder = "Hi Sir/Mdm,\nSorry, we have deem you unfit to be accepted. Please submit another one request\nThank you", @class = "form-control", @rows=5 })
+                                                @Html.TextAreaFor(m => Model.emailModel.Body, new { @placeholder = "Hi Sir/Mdm,\nSorry, we have deemed you unfit to be accepted. Please submit another one request\nThank you", @class = "form-control", @rows=5 })
                                             </div>
                                         </div>
                                         <div class="form-group-lg">
