--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/InterestedParty/EditMemberProfile.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/InterestedParty/EditMemberProfile.cshtml
@@ -22,18 +22,8 @@
     </div>
 
     <div class="form-group row">
-        <label class="col-sm-2 col-form-label">@Html.LabelFor(m => m.InterestedParties.smokerOrNot)</label>
-        <div class="col-sm-10">
-            @Html.RadioButtonFor(m => m.InterestedParties.smokerOrNot, true, new { required = "required" })
-            Yes
-
-            @Html.RadioButtonFor(m => m.InterestedParties.smokerOrNot, false, new { required = "required" })
-            No
-        </div>
-    </div>
-
-    <div class="form-group row">
         <input class="btn btn-primary btnSignUp" type="submit" value="Edit" />
+        <button class="btn btn-secondary"> @Html.ActionLink("Back", "MemberProfile", "InterestedParty", new { viewUsername = Session["username"].ToString() }, new { page = 1 })</button>
     </div>
 }
 
