--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/InterestedParty/TrackProgress.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/InterestedParty/TrackProgress.cshtml
@@ -16,7 +16,7 @@
     }
 </style>
 
-<h3 style="padding-top:3%; padding-bottom:3%">@Html.DisplayFor(model => model.userName)'s Progress</h3>
+<h3 style="padding-top:3%; padding-bottom:3%">@ViewBag.progressName's Progress</h3>
 
 <!--Calendar-->
 
